--- a/LevvaCoins/package.json
+++ b/LevvaCoins/package.json
@@ -10,15 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "1.0.5",
     "@radix-ui/react-radio-group": "^1.1.2",
+    "axios": "^1.4.0",
+    "effector": "^22.8.6",
+    "effector-react": "^22.5.3",
     "phosphor": "^0.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-router-dom": "^6.11.2",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "vite-plugin-node-stdlib-browser": "^0.2.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
