--- a/LevvaCoins/package.json
+++ b/LevvaCoins/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "effector": "^22.8.6",
     "effector-react": "^22.5.3",
+    "jsonwebtoken": "^8.5.1",
     "phosphor": "^0.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,6 +29,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
